// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should display add transaction row 1`] = `
<div>
  <div
    className="grid-container"
  >
    <span>
      <div
        className="transaction-header"
      >
        Projection
      </div>
    </span>
    <div>
      <Connect(AddTransactionItem)
        handleState={[Function]}
      />
    </div>
    <div />
  </div>
</div>
`;

exports[`should display no transactions if no transactions 1`] = `
<div>
  <div
    className="grid-container"
  >
    <span>
      <div
        className="transaction-header"
      >
        Projection
      </div>
    </span>
    <div />
    <div>
      <div>
        <span>
          No Transactions
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`should render TransactionList with Transcations  1`] = `
<div>
  <div
    className="grid-container"
  >
    <span>
      <div
        className="transaction-header"
      >
        Projection
      </div>
    </span>
    <div />
    <div />
  </div>
</div>
`;
